force-app/main/default/objects/Container_Warehouse__c/Container_Warehouse__c.object-meta.xml
<CustomObject>
    <label>Container Warehouse</label>
    <nameField>
        <label>Container Warehouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Container Warehouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>