force-app/main/default/objects/Container_Warehouse__c/fields/Max_Cell_Level__c.field-meta.xml
<CustomField>
    <fullName>Max_Cell_Level__c</fullName>
    <description>Container count</description>
    <label>Max Cell Level</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>